--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -76,6 +76,13 @@
          text-align: center;
       }
 
+      &__large-2 {
+         float: left;
+         width: 16.66%;
+         text-align: center;
+         background-color: #000;
+      }
+
       &__large-4 {
          float: left;
          width: 33.33%;
@@ -97,6 +104,13 @@
 
       &__large-8--smaller {
          width: 63%;
+      }
+
+      &__large-10 {
+         float: left;
+         width: 83.33%;
+         text-align: center;
+         background-color: #333;
       }
 
       &__large-11 {
